# Hybrid-VoxelMap

./: .gitignore  CMakeLists.txt  LICENSE  README.md  package.xml
RandLA-Net/: Inf_scan_ros.py
config/: M2DGR.yaml  MCD_mid70_body_gt_semantic_adapted.yaml  MCD_mid70_body_pure_ndt.yaml  MCD_mid70_body_pure_ndt_adapted.yaml  MCD_mid70_body_salsanext_semantic_adapted.yaml  MCD_mid70_body_semantic_adapted.yaml  MCD_mid70_pure_ndt.yaml  kitti08.yaml  ntuviral.yaml
include/: common_lib.h  voxelmapplus_util.hpp
launch/: mapping_kitti08.launch.py  mapping_kitti08_salsanext.launch.py  mapping_m2dgr.launch  mapping_m2dgr.launch.py  mapping_mcd_mid70.launch.py  mapping_mcd_mid70_salsanext.launch.py  mapping_ntuviral.launch  mapping_ntuviral.launch.py
msg/: States.msg
rviz_cfg/: voxel_mapping.rviz
scripts/: generic_semantic_field_bridge.py  kitti_sequence_publisher.py  salsanext_mcd_livox_semantic_ros2_node.py  salsanext_semantic_ros2_node.py
src/: IMU_Processing.hpp  kitti_gt_semantic_bridge.cpp  kitti_sequence_publisher.cpp  livox_custom_to_pointcloud2.cpp  mcd_mid70_semantic_gt_bridge.cpp  preprocess.cpp  preprocess.h  voxelMapping.cpp
