<?xml version="1.0"?>
<package format="3">
  <name>hybrid_voxel_map</name>
  <version>1.0.0</version>
  <description>LiDAR odometry and hybrid voxel map localization for ROS 2 Humble.</description>

  <maintainer email="fuzhang@hku.hk">Fu Zhang</maintainer>
  <license>BSD</license>
  <author email="ycj1@connect.hku.hk">Chongjian Yuan</author>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>pcl_conversions</depend>
  <depend>tf2</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>tf2_ros</depend>

  <build_depend>rosidl_default_runtime</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>rviz2</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
